# lean-client

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
src/lean_client/: __init__.py  client.py  harness.py  instruments.py  lsp_utils.py  theorem_utils.py
tests/: conftest.py  test_client.py  test_harness.py  test_instruments.py  test_multiprocessing.py  test_prefix.py  test_shutdown.py  test_utils.py  util.py
tests/test-data/lean-instr-proj/: LeanInstrProj.lean  Main.lean  README.md  lake-manifest.json  lakefile.lean  lakefile.toml
tests/test-data/lean-instr-proj/LeanInstrProj/: BatteryStuff.lean  Harness.lean  Prefix.lean  TheoremRanges.lean
tests/test-data/lean-instr-proj/logs/: fwIn.txt  wdIn.txt  wdOut.txt
tests/test-data/lean-instr-proj/server-log/: fwOut.txt  wdIn.txt  wdOut.txt
tests/test-data/lean-no-instr-proj/: LeanNoInstrProj.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
