[project]
name = "lean-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kyle Thompson", email = "r7thompson@ucsd.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "dataclasses-json>=0.6.7",
]

[project.scripts]
lean-client = "lean_client:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
