[project]
name = "lean-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Kyle Thompson", email = "r7thompson@ucsd.edu" }]
requires-python = ">=3.11"
dependencies = ["psutil>=7.1.3", "pydantic>=2.12.4"]

[project.scripts]
lean-client = "lean_client:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
